Prevent icons jumping

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -138,6 +138,7 @@ h1 {
 		background-position: center center;
 		background-repeat: no-repeat;
 		position: relative;
+		display:none;
 		
 		&:last-child::after {
 			display: none;
